--- a/ros-audio_capture/install.yaml
+++ b/ros-audio_capture/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: https://github.com/ros-drivers/audio_common.git
     sub-dir: audio_capture
+# maybe use ros-system target in future, when bug is fixed
