--- a/ros-clear_costmap_recovery/install.yaml
+++ b/ros-clear_costmap_recovery/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: https://github.com/tue-robotics/navigation.git
     sub-dir: clear_costmap_recovery
+    version: kinetic-devel
