--- a/ros-move_slow_and_clear/install.yaml
+++ b/ros-move_slow_and_clear/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: https://github.com/tue-robotics/navigation.git
     sub-dir: move_slow_and_clear
+    version: kinetic-devel
