--- a/ros-sergio_bringup/install.yaml
+++ b/ros-sergio_bringup/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/sergio_bringup
+    url: https://github.com/tue-robotics/sergio_bringup.git
