--- a/sergio1/install.yaml
+++ b/sergio1/install.yaml
@@ -3,6 +3,9 @@
 
 - type: target
   name: sergio-start
+  
+- type: target
+  name: ros-amigo_hardware
 
 - type: target
   name: ros-sergio_hardware
