--- a/ros-ocl/install.yaml
+++ b/ros-ocl/install.yaml
@@ -1,5 +1,7 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/orocos-toolchain/ocl.git
-    version: toolchain-2.9
+    type: system
+    name: ocl
+#    type: git
+#    url: https://github.com/orocos-toolchain/ocl.git
+#    version: toolchain-2.9
