broken dependency, added ros-diagnostic_aggregator to tue install

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -2,6 +2,9 @@
 - type: target
   name: tue-common
 
+- type: target
+  name: ros-diagnostic_aggregator
+
 # Navigation
 - type: target
   name: ros-cb_base_navigation
