--- a/ros-freenect_launch/install.yaml
+++ b/ros-freenect_launch/install.yaml
@@ -2,3 +2,11 @@
   source:
     type: system
     name: freenect-launch
+- type: ros
+  source:
+    type: system
+    name: image-transport
+- type: ros
+  source:
+    type: system
+    name: compressed-image-transport
