--- a/ros-rtt_diagnostic_msgs/install.yaml
+++ b/ros-rtt_diagnostic_msgs/install.yaml
@@ -1,7 +1,7 @@
 - type: ros
   source:
     type: system
-    name: rtt-ros-integration
+    name: rtt-diagnostic-msgs
 #    type: git
 #    url: https://github.com/orocos/rtt_ros_integration
 #    sub-dir: typekits/rtt_diagnostic_msgs
