--- a/ros-r5cop_demo/install.yaml
+++ b/ros-r5cop_demo/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/r5cop/r5cop_demo.git
+    url: https://github.com/tue-robotics/r5cop_demo.git
