--- a/ros-smach/install.yaml
+++ b/ros-smach/install.yaml
@@ -1,6 +1,5 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/tue-robotics/executive_smach.git
-    sub-dir: smach
+    type: system
+    name: smach
 
