--- a/ros-nl_robot_console/install.yaml
+++ b/ros-nl_robot_console/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/nl_robot_console
+    url: https://github.com/tue-robotics/nl_robot_console.git
