--- a/ros-amigo_head_ref/install.yaml
+++ b/ros-amigo_head_ref/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/amigo_head_ref
+    url: https://github.com/tue-robotics/amigo_head_ref.git
