--- a/ros-amigo_ref_interpolator/install.yaml
+++ b/ros-amigo_ref_interpolator/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/amigo_ref_interpolator
+    url: https://github.com/tue-robotics/amigo_ref_interpolator.git
