--- a/ros-fast_simulator_data/install.yaml
+++ b/ros-fast_simulator_data/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/fast_simulator_data
+    url: https://github.com/tue-robotics/fast_simulator_data.git
