--- a/ros-pi_trees_ros/install.yaml
+++ b/ros-pi_trees_ros/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/LoyVanBeek/pi_trees
+    url: https://github.com/LoyVanBeek/pi_trees.git
     sub-dir: pi_trees_ros
