--- a/ros-rtt_nav_msgs/install.yaml
+++ b/ros-rtt_nav_msgs/install.yaml
@@ -3,6 +3,6 @@
     type: system
     name: rtt-nav-msgs
 #    type: git
-#    url: https://github.com/orocos/rtt_ros_integration
+#    url: https://github.com/orocos/rtt_ros_integration.git
 #    sub-dir: typekits/rtt_nav_msgs
 #    version: toolchain-2.9
