--- a/ros-rtt_std_srvs/install.yaml
+++ b/ros-rtt_std_srvs/install.yaml
@@ -3,6 +3,6 @@
     type: system
     name: rtt-std-srvs
 #    type: git
-#    url: https://github.com/orocos/rtt_ros_integration
+#    url: https://github.com/orocos/rtt_ros_integration.git
 #    sub-dir: typekits/rtt_std_srvs
 #    version: toolchain-2.9
