--- a/ros-text_to_speech/install.yaml
+++ b/ros-text_to_speech/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/text_to_speech
+    url: https://github.com/tue-robotics/text_to_speech.git
