--- a/ros-tf_checker/install.yaml
+++ b/ros-tf_checker/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/tf_checker
+    url: https://github.com/tue-robotics/tf_checker.git
