--- a/ros-virtual_cam/install.yaml
+++ b/ros-virtual_cam/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/virtual_cam
+    url: https://github.com/tue-robotics/virtual_cam.git
