update tue-save-map function
Now creates a model in ed_object_models with walls. PGM anc XCF file.

--- a/ros-map_server/install.yaml
+++ b/ros-map_server/install.yaml
@@ -4,3 +4,9 @@
     url: https://github.com/tue-robotics/navigation.git
     sub-dir: map_server
     version: kinetic-devel
+
+- type: target
+  name: gimp
+
+- type: target
+  name: imagemagick
