Add .git to tue_recorder

--- a/ros-tue_recorder/install.yaml
+++ b/ros-tue_recorder/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/tue_recorder
+    url: https://github.com/tue-robotics/tue_recorder.git
