Add .git to usb_cam

--- a/ros-usb_cam/install.yaml
+++ b/ros-usb_cam/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/bosch-ros-pkg/usb_cam
+    url: https://github.com/bosch-ros-pkg/usb_cam.git
