--- a/tue-fancydesktop/shortcuts/.SERGIO Dashboard.desktop
+++ b/tue-fancydesktop/shortcuts/.SERGIO Dashboard.desktop
@@ -15,7 +15,7 @@ Keywords=Run;
 Actions=New
 X-Ubuntu-Gettext-Domain=gnome-terminal
 Terminal=false
-Exec=bash -i -c sdashboard
+Exec=bash -i -c sergio-dashboard
 Icon[en_US]=/usr/share/pixmaps/tue/sergiodashboardsmall.png
 Name[en_US]=.SERGIO Dashboard
 Name=AMIGO Dashboard
