Add ros-laser_filters to amigo1, because decoupled from urg

--- a/amigo1/install.yaml
+++ b/amigo1/install.yaml
@@ -15,6 +15,9 @@
 
 - type: target
   name: ros-urg_node
+  
+- type: target
+  name: ros-laser_filters
 
 - type: target
   name: ros-battery_manager
