Add ros-laser_filters to sergio1, becuase decoupled from urg_node

--- a/sergio1/install.yaml
+++ b/sergio1/install.yaml
@@ -20,6 +20,9 @@
   name: ros-urg_node
 
 - type: target
+  name: ros-laser_filters
+
+- type: target
   name: ros-battery_manager
 
 - type: target
