--- a/ros-dialogflow_ros/install.yaml
+++ b/ros-dialogflow_ros/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com:tue-robotics/dialogflow_ros.git
+    url: https://github.com/tue-robotics/dialogflow_ros.git
