Added comments by used options

--- a/amigo1/chrony.conf
+++ b/amigo1/chrony.conf
@@ -2,7 +2,11 @@
 allow 192.168/16
 
 #Not synchronized to any external source. (local mode)
-local stratum 10
+local stratum 8
 
 # Allow manual time change using chronyc settime command
 manual
+
+# Generate periodic writes to the disc (protection against powerfailure)
+log rtc
+
