--- a/chrony-client-pc/chrony.conf
+++ b/chrony-client-pc/chrony.conf
@@ -1,1 +1,16 @@
-server amigo1 iburst
+# Client PC's can only synchronise with amigo1 beteen 2^2=4 and 2^5=32 seconds
+server amigo1 minpoll 2 maxpoll 5
+
+# Setup a local stratum. amigo1 can sync back to this on boot, prevent issues with failing batteries and going back to the year 1970
+local stratum 10
+allow amigo1
+
+# All offsets over 1 second are corrected immediately at start.
+initstepslew 1 amigo1
+
+# Make steps if the time is off by more than 1 second during runtime
+makestep 1.0 -1
+
+# Generate periodic writes to the disc (protection against powerfailure)
+log rtc
+
