Do perform the initial voting to boot up at the most sensible time

--- a/amigo1/chrony.conf
+++ b/amigo1/chrony.conf
@@ -4,6 +4,9 @@ allow 192.168/16
 #Not synchronized to any external source. (local mode)
 local stratum 8
 
+# All offsets over 1 second are corrected immediately at start. Each of the amigos is rapidly polled several times, and a majority voting mechanism used to find the most likely range of system clock error that is present.
+initstepslew 1 192.168.44.92 192.168.44.93 192.168.44.94
+
 # Allow manual time change using chronyc settime command
 manual
 
