added cmdgen dependency to eegpsr, gpsr and spr

--- a/ros-challenge_eegpsr/install.yaml
+++ b/ros-challenge_eegpsr/install.yaml
@@ -3,3 +3,6 @@
     type: git
     url: https://github.com/tue-robotics/tue_robocup.git
     sub-dir: challenge_eegpsr
+
+- type: target
+  name: cmdgen
