--- a/ros-challenge_spr/install.yaml
+++ b/ros-challenge_spr/install.yaml
@@ -3,3 +3,6 @@
     type: git
     url: https://github.com/tue-robotics/tue_robocup.git
     sub-dir: challenge_spr
+
+- type: target
+  name: cmdgen
