--- a/ros-diagnostic_updater/install.yaml
+++ b/ros-diagnostic_updater/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: diagnostic-updater
+    type: git
+    url: https://github.com/tue-robotics/diagnostics
+    sub-dir: diagnostic_updater
