Use local hostname resolving to get rid of IP ranges.

--- a/sergio2/chrony.conf
+++ b/sergio2/chrony.conf
@@ -1,9 +1,9 @@
-# This configuration file has been put together using this guide: 
+# This configuration file has been put together using this guide:
 # http://chrony.tuxfamily.org/manual.html
 
 
 # Client PC's can only synchronise with sergio1
-server 192.168.44.71 minpoll 2 maxpoll 5
+server sergio1.local minpoll 2 maxpoll 5
 
 # Some defaults
 keyfile /etc/chrony/chrony.keys
@@ -15,7 +15,7 @@ dumpdir /var/lib/chrony
 
 # Setup a local stratum. sergio1 can sync back to this on boot
 local stratum 10
-allow 192.168.44.71
+allow sergio1.local
 
 # Dump measurements when daemon exits.
 dumponexit
@@ -23,8 +23,8 @@ dumponexit
 # Generate periodic writes to the disc (protection against powerfailure at the cost of disk activity)
 log rtc
 
-# All offsets over 1 second are corrected immediately at start. 
-initstepslew 1 192.168.44.71
+# All offsets over 1 second are corrected immediately at start.
+initstepslew 1 sergio1.local
 
 # Dump measurements when daemon exits.
 dumponexit
@@ -48,5 +48,5 @@ rtcfile /var/lib/chrony/chrony.rtc
 # the CMOS clock is on UTC (GMT).  If it reads '# rtconutc' or is absent
 # chrony will assume local time.  The line (if any) was written by the
 # chrony postinst based on what it found in /etc/default/rcS.  You may
-# change it if necessary. 
+# change it if necessary.
 rtconutc
