--- a/sergio1/chrony.conf
+++ b/sergio1/chrony.conf
@@ -1,4 +1,4 @@
-# This configuration file has been put together using this guide: 
+# This configuration file has been put together using this guide:
 # http://chrony.tuxfamily.org/manual.html
 
 
@@ -18,7 +18,7 @@ dumpdir /var/lib/chrony
 
 # Setup a local stratum for the Clients to sync to
 local stratum 8
-allow 192.168.44
+allow 192.168
 
 # Dump measurements when daemon exits.
 dumponexit
@@ -27,7 +27,7 @@ dumponexit
 log rtc
 
 # All offsets over 1 second are corrected immediately at start. Each of the amigos is rapidly polled several times, and a majority voting mechanism used to find the most likely range of system clock error that is present.
-initstepslew 1 192.168.44.72 192.168.44.73 0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org
+initstepslew 1 sergio2.local sergio3.local 0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org
 
 # Dump measurements when daemon exits.
 dumponexit
@@ -54,5 +54,5 @@ rtcfile /var/lib/chrony/chrony.rtc
 # the CMOS clock is on UTC (GMT).  If it reads '# rtconutc' or is absent
 # chrony will assume local time.  The line (if any) was written by the
 # chrony postinst based on what it found in /etc/default/rcS.  You may
-# change it if necessary. 
+# change it if necessary.
 rtconutc
