--- a/ros-python_orocos_kdl/install.yaml
+++ b/ros-python_orocos_kdl/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: python-orocos-kdl
+      type: git
+      url: https://github.com/smart-robotics/orocos_kinematics_dynamics.git
+      sub-dir: python_orocos_kdl
