--- a/sergio1/chrony.conf
+++ b/sergio1/chrony.conf
@@ -1,58 +1,14 @@
-# This configuration file has been put together using this guide:
-# http://chrony.tuxfamily.org/manual.html
+# Allow NTP client access from local network.
+allow 192.168/16
 
-
-# amigo1 only synchronises with the internetz
-server 0.debian.pool.ntp.org minpoll 8
-server 1.debian.pool.ntp.org minpoll 8
-server 2.debian.pool.ntp.org minpoll 8
-server 3.debian.pool.ntp.org minpoll 8
-
-# Some defaults
-keyfile /etc/chrony/chrony.keys
-commandkey 1
-driftfile /var/lib/chrony/chrony.drift
-log tracking measurements statistics
-logdir /var/log/chrony
-dumpdir /var/lib/chrony
-
-# Setup a local stratum for the Clients to sync to
+#Not synchronized to any external source. (local mode)
 local stratum 8
-allow 192.168
 
-# Dump measurements when daemon exits.
-dumponexit
+# All offsets over 1 second are corrected immediately at start. Each of the sergios is rapidly polled several times, and a majority voting mechanism used to find the most likely range of system clock error that is present.
+initstepslew 1 sergio2.local sergio3.local sergio4.local sergio5.local
 
-# Generate periodic writes to the disc (protection against powerfailure at the cost of disk activity)
+# Allow manual time change using chronyc settime command
+manual
+
+# Generate periodic writes to the disc (protection against powerfailure)
 log rtc
-
-# All offsets over 1 second are corrected immediately at start. Each of the amigos is rapidly polled several times, and a majority voting mechanism used to find the most likely range of system clock error that is present.
-initstepslew 1 sergio2.local sergio3.local 0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org
-
-# Dump measurements when daemon exits.
-dumponexit
-
-# Generate periodic writes to the disc (protection against powerfailure at the cost of disk activity)
-log rtc
-
-# Stop bad estimates upsetting machine clock.
-maxupdateskew 5.0
-
-# This directive defines an email address to which mail should be sent
-# if chronyd applies a correction exceeding a particular threshold to the
-# system clock.
-mailonchange t.t.g.clephas@alumnus.tue.nl 0.5
-
-# This directive tells chrony to regulate the real-time clock and tells it
-# Where to store related data.  It may not work on some newer motherboards
-# that use the HPET real-time clock.  It requires enhanced real-time
-# support in the kernel.  I've commented it out because with certain
-# combinations of motherboard and kernel it is reported to cause lockups.
-rtcfile /var/lib/chrony/chrony.rtc
-
-# If the last line of this file reads 'rtconutc' chrony will assume that
-# the CMOS clock is on UTC (GMT).  If it reads '# rtconutc' or is absent
-# chrony will assume local time.  The line (if any) was written by the
-# chrony postinst based on what it found in /etc/default/rcS.  You may
-# change it if necessary.
-rtconutc
