--- a/sergio2/install.yaml
+++ b/sergio2/install.yaml
@@ -2,6 +2,18 @@
   name: sergio
 
 - type: target
+  name: audio
+
+- type: target
+  name: ros-kinect_driver
+
+- type: target
+  name: ros-urg_node
+
+- type: target
+  name: ros-laser_filters
+
+- type: target
   name: sergio-chrony-client-pc
 
 - type: target
