fix(kdl), master doesn't build from source

--- a/ros-python_orocos_kdl/install.yaml
+++ b/ros-python_orocos_kdl/install.yaml
@@ -1,5 +1,6 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/smart-robotics/orocos_kinematics_dynamics.git
+      url: https://github.com/orocos/orocos_kinematics_dynamics.git
       sub-dir: python_orocos_kdl
+      version: 6fe130a43293c84bc0a1cfcf2fe3e04c6b4d911a
