Add dynamixel controllers to sergio2 target

--- a/sergio2/install.yaml
+++ b/sergio2/install.yaml
@@ -14,6 +14,9 @@
   name: ros-laser_filters
 
 - type: target
+  name: ros-dynamixel_controllers
+
+- type: target
   name: sergio-chrony-client-pc
 
 - type: target
