--- a/ros-dynamixel_msgs/install.yaml
+++ b/ros-dynamixel_msgs/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: dynamixel-msgs
+    type: git
+    url: https://github.com/tue-robotics/dynamixel_motor.git
+    sub-dir: dynamixel_msgs
