add dynamixel_controllers to amigo1 target

--- a/amigo1/install.yaml
+++ b/amigo1/install.yaml
@@ -20,6 +20,9 @@
   name: ros-laser_filters
 
 - type: target
+  name: ros-dynamixel_controllers
+
+- type: target
   name: ros-battery_manager
 
 - type: target
