--- a/tue-fancydesktop/configs/variety/variety.conf
+++ b/tue-fancydesktop/configs/variety/variety.conf
@@ -188,7 +188,7 @@ src4 = False|latest|Latest favorites by the other users of Variety. [May contain
 src5 = False|desktoppr|Random wallpapers from Desktoppr.co
 src6 = False|apod|NASA's Astronomy Picture of the Day
 src7 = False|earth|World Sunlight Map - live wallpaper from Die.net
-src8 = True|folder|/home/amigo/.tue/installer/targets/tue-fancydesktop/desktopfotos
+src8 = True|folder|~/.tue/installer/targets/tue-fancydesktop/desktopfotos
 src9 = False|bing|Bing Photo of the Day
 src10 = False|unsplash|High-resolution photos from Unsplash.com
 
