Install ccache also on robots
small refactor in robot and robot-user target

--- a/robot-user/install.yaml
+++ b/robot-user/install.yaml
@@ -1,5 +1,6 @@
 - type: target
-  name: networking
+  name: robot-user-robot-common
+
 # Tele-operation
 - type: target
   name: ros-tue_teleop_keyboard
