revert robot-user-robot-common target

--- a/robot-user/install.yaml
+++ b/robot-user/install.yaml
@@ -1,5 +1,9 @@
 - type: target
-  name: robot-user-robot-common
+  name: ccache
+- type: target
+  name: gitsu
+- type: target
+  name: networking
 
 # Tele-operation
 - type: target
