--- a/ros-image_recognition_openpose/install.yaml
+++ b/ros-image_recognition_openpose/install.yaml
@@ -2,4 +2,4 @@
   source:
     type: git
     url: https://github.com/tue-robotics/image_recognition.git
-    sub-dir: openpose_ros
+    sub-dir: image_recognition_openpose
