Update and rename installer/targets/ros-tensorflow_ros_rqt/install.yaml to installer/targets/ros-image_recognition_tensorflow_rqt/install.yaml

--- a/ros-image_recognition_tensorflow_rqt/install.yaml
+++ b/ros-image_recognition_tensorflow_rqt/install.yaml
@@ -2,4 +2,4 @@
   source:
     type: git
     url: https://github.com/tue-robotics/image_recognition.git
-    sub-dir: tensorflow_ros_rqt
+    sub-dir: image_recognition_tensorflow_rqt
