openpose_ros -> image_recognition_openpose

--- a/amigo4/install.yaml
+++ b/amigo4/install.yaml
@@ -2,7 +2,7 @@
   name: amigo-chrony-client-pc
 
 - type: target
-  name: ros-openpose_ros
+  name: ros-image_recognition_openpose
 
 #- type: target
 #  name: openpose #Lets leave this manual for now
