--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -30,15 +30,16 @@
 # World model
 - type: target
   name: ros-ed
-- type: target
 
+- type: target
   name: ros-ed_perception
-- type: target
 
+- type: target
   name: ros-ed_perception_models
-- type: target
 
+- type: target
   name: ros-ed_gui_server
+
 - type: target
   name: ros-ed_localization
 
@@ -65,7 +66,7 @@
   name: ros-tensorflow_ros
 
 - type: target
-
   name: ros-people_detector
+
 - type: target
-  name: ros-openface_ros
+  name: ros-image_recognition_openface
