--- a/ros-rosbridge_server/install.yaml
+++ b/ros-rosbridge_server/install.yaml
@@ -1,5 +1,7 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/tue-robotics/rosbridge_suite.git
-    sub-dir: rosbridge_server
+    type: system
+    name: rosbridge-server
+    #type: git
+    #url: https://github.com/tue-robotics/rosbridge_suite.git
+    #sub-dir: rosbridge_server
