--- a/ros-audio_capture/install.yaml
+++ b/ros-audio_capture/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: audio-capture
+    type: git
+    url: https://github.com/ros-drivers/audio_common.git
+    sub-dir: audio_capture
