--- a/hero2/install.yaml
+++ b/hero2/install.yaml
@@ -1,2 +1,25 @@
 - type: target
+  name: hero
+
+- type: target
   name: hero-chrony-client-pc
+
+- type: target
+  name: megatools
+
+# Middleware
+- type: target
+  name: tue-middleware
+
+# RoboCup
+- type: target
+  name: tue-robocup-at-home
+
+- type: target
+  name: audio
+  
+# Taken from amigo4
+- type: target
+  name: ros-image_recognition_openpose
+
+#ADD a ros-hero_hardware?
