--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -19,20 +19,15 @@
   name: megasync
 
 # Diagnostics
-- type: ros
-  source:
-    type: system
-    name: viz
-
 - type: target
-  name: spot
+  name: ros-viz
 
 # -------------------- ROBOCUP --------------------
 
 - type: target
   name: tue-robocup-at-home
 
-# -------------------- ROBOTS --------------------
+# -------------------- ROBOTS ---------------------
 
 - type: target
   name: ros-dashboard
@@ -57,15 +52,10 @@
 - type: target
   name: ros-ed_rviz_plugins
 
-# HSR commands
-- type: target
-  name: hero-user
-
 # Handy shit
 - type: target
   name: terminator
-
-- type: system
-  name: htop
+- type: target
+  name: spot
 - type: system
   name: meld
