--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: shell
+addons:
+  - apt:
+      - yamllint
 script:
   - bash -c 'shopt -s globstar; shellcheck **/install.bash **/setup'
   - bash -c 'find ./ -iname '*.yaml' -or -iname '*.yml' | xargs yamllint'
