add yamllint to travis addons correct

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: shell
 addons:
-  - apt:
+  apt:
+    packages:
       - yamllint
 script:
   - bash -c 'shopt -s globstar; shellcheck **/install.bash **/setup'
