[hero2] add dependency on ros-upower_ros

--- a/hero2/install.yaml
+++ b/hero2/install.yaml
@@ -7,6 +7,10 @@
 - type: target
   name: megasync
 
+# Laptop Battery Status
+- type: target
+  name: ros-upower_ros
+
 # Middleware
 - type: target
   name: tue-middleware
