[hero-dev] add hero-dashboard

--- a/hero-dev/install.yaml
+++ b/hero-dev/install.yaml
@@ -27,7 +27,9 @@
 
 # -------------------- ROBOTS ---------------------
 
-# HERO
+- type: target
+  name: hero-dashboard
+
 - type: target
   name: hero-user
 
