changed chrony.conf for network

--- a/hero1/chrony.conf
+++ b/hero1/chrony.conf
@@ -1,5 +1,6 @@
 # Allow NTP client access from local network.
 allow 192.168/16
+allow 10.18/16
 
 #Not synchronized to any external source. (local mode)
 local stratum 8
