--- a/ros-image_recognition_people_detector/install.yaml
+++ b/ros-image_recognition_people_detector/install.yaml
@@ -3,4 +3,4 @@
     type: git
     url: https://github.com/tue-robotics/image_recognition.git
     sub-dir: image_recognition_people_detector
-    version: new/people_detector
+    version: rgo2019
