--- a/ros-people_detector/install.yaml
+++ b/ros-people_detector/install.yaml
@@ -2,3 +2,5 @@
   source:
     type: git
     url: https://github.com/tue-robotics/people_detector.git
+    sub-dir: people_detection_3d
+    version: rgo2019
