--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -52,10 +52,10 @@
   name: ros-ed_sensor_integration
 
 - type: target
-  name: ros-head_ref_ed_client
+  name: ros-ed_sensor_integration
 
 - type: target
-  name: ros-image_recognition
+  name: ros-ed_people_detector
 
 # Execution
 - type: target
