changed detection to recognition

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -52,14 +52,14 @@
   name: ros-ed_sensor_integration
 
 - type: target
-  name: ros-ed_people_detection
+  name: ros-ed_people_recognition
 
 # Execution
 - type: target
   name: ros-action_server
 
 - type: target
-  name: ros-people_detection_3d
+  name: ros-people_recognition_3d
 
 - type: target
   name: ros-conversation_engine
