--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -54,6 +54,9 @@
 - type: target
   name: ros-ed_people_recognition
 
+- type: target
+  name: ros-image_recognition
+
 # Execution
 - type: target
   name: ros-action_server
