--- a/ros-python_orocos_kdl/install.yaml
+++ b/ros-python_orocos_kdl/install.yaml
@@ -1,7 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/orocos/orocos_kinematics_dynamics.git
-    sub-dir: python_orocos_kdl
-    # temp for getting everyone back to master instead of specific commit Matthijs 01-04-2018
-    version: master
+    type: system
+    name: python-orocos-kdl
