--- a/ros-rgbd_msgs/install.yaml
+++ b/ros-rgbd_msgs/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/rgbd_msgs.git
+    url: https://github.com/tue-robotics/rgbd.git
+    sub-dir: rgbd_msgs
