--- a/ros-smach/install.yaml
+++ b/ros-smach/install.yaml
@@ -1,5 +1,6 @@
 - type: ros
   source:
-    type: system
-    name: smach
+    type: git
+    url: https://github.com/tue-robotics/executive_smach.git
+    sub-dir: smach
 
