--- a/ros-smach_ros/install.yaml
+++ b/ros-smach_ros/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: smach-ros
+    type: git
+    url: https://github.com/tue-robotics/executive_smach.git
+    sub-dir: smach_ros
