[matthijs] update geany config

--- a/matthijs/geany.conf
+++ b/matthijs/geany.conf
@@ -89,8 +89,8 @@ complete_snippets=true
 auto_complete_symbols=true
 pref_editor_disable_dnd=false
 pref_editor_smart_home_key=true
-pref_editor_newline_strip=false
-line_break_column=72
+pref_editor_newline_strip=true
+line_break_column=120
 auto_continue_multiline=true
 comment_toggle_mark=~ 
 scroll_stop_at_last_line=true
@@ -101,16 +101,16 @@ default_eol_character=2
 pref_editor_new_line=true
 pref_editor_ensure_convert_line_endings=false
 pref_editor_replace_tabs=false
-pref_editor_trail_space=false
+pref_editor_trail_space=true
 pref_toolbar_show=true
 pref_toolbar_append_to_menu=false
 pref_toolbar_use_gtk_default_style=true
 pref_toolbar_use_gtk_default_icon=true
 pref_toolbar_icon_style=0
 pref_toolbar_icon_size=0
-pref_template_developer=amigo
+pref_template_developer=Matthijs van der Burgh
 pref_template_company=
-pref_template_mail=amigo@amigoVB
+pref_template_mail=MatthijsBurgh@outlook.com
 pref_template_initial=a
 pref_template_version=1.0
 pref_template_year=%Y
