--- a/ros-rosapi/install.yaml
+++ b/ros-rosapi/install.yaml
@@ -2,3 +2,6 @@
   source:
     type: system
     name: rosapi
+    #type: git
+    #url: https://github.com/tue-robotics/rosbridge_suite.git
+    #sub-dir: rosapi
