--- a/ros-rosbridge_library/install.yaml
+++ b/ros-rosbridge_library/install.yaml
@@ -2,3 +2,6 @@
   source:
     type: system
     name: rosbridge-library
+    #type: git
+    #url: https://github.com/tue-robotics/rosbridge_suite.git
+    #sub-dir: rosbridge_library
