--- a/ros-rosapi/install.yaml
+++ b/ros-rosapi/install.yaml
@@ -1,7 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: rosapi
-    #type: git
-    #url: https://github.com/tue-robotics/rosbridge_suite.git
-    #sub-dir: rosapi
+    type: git
+    url: https://github.com/tue-robotics/rosbridge_suite.git
+    sub-dir: rosapi
