--- a/ros-rosbridge_suite/install.yaml
+++ b/ros-rosbridge_suite/install.yaml
@@ -1,7 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: rosbridge-suite
-    #type: git
-    #url: https://github.com/tue-robotics/rosbridge_suite.git
-    #sub-dir: rosbridge_suite
+    type: git
+    url: https://github.com/tue-robotics/rosbridge_suite.git
+    sub-dir: rosbridge_suite
