--- a/hero-start/install.yaml
+++ b/hero-start/install.yaml
@@ -30,10 +30,10 @@
 - type: target
   name: ros-image_recognition_msgs
 - type: target
-  name: ros-ed_robocup
+  name: ros-ed_robocup_msgs
 - type: target
-  name: ros-ed_sensor_integration
+  name: ros-ed_sensor_integration_msgs
 - type: target
   name: ros-cb_planner_msgs_srvs
 - type: target
-  name: ros-ed_perception
+  name: ros-ed_perception_msgs
