--- a/hero2/install.yaml
+++ b/hero2/install.yaml
@@ -7,6 +7,10 @@
 - type: target
   name: megasync
 
+# RGBD server
+- type: target
+  name: ros-rgbd
+
 # Laptop Battery Status
 - type: target
   name: ros-upower_ros
