[hero-demo-user][hero-start][hero-user] fixing hero_bringup/description deps

--- a/hero-start/install.yaml
+++ b/hero-start/install.yaml
@@ -5,6 +5,9 @@
   name: ros-text_to_speech
 
 - type: target
+  name: ros-hero_bringup
+
+- type: target
   name: ros-hero_description
 
 - type: target
