[hsrb-full][hero1][hero1-demo] seperate target for hsrb-full

--- a/hero1-demo/install.yaml
+++ b/hero1-demo/install.yaml
@@ -18,7 +18,5 @@
 - type: target
   name: ros-test_tools
 
-- type: ros
-  source:
-    type: system
-    name: hsrb-full
+- type: target
+  name: hsrb-full
