[hero1-demo][hero2-demo] depend on tmux

--- a/hero2-demo/install.yaml
+++ b/hero2-demo/install.yaml
@@ -29,6 +29,10 @@
 - type: target
   name: ros-image_recognition_openpose
 
+# tmux
+- type: target
+  name: tmux
+
 # Dekstop tools
 - type: target
   name: terminator
