Also ignore docs folder since it is generated

--- a/vscode/workspace_settings.json
+++ b/vscode/workspace_settings.json
@@ -3,6 +3,7 @@
         ".catkin_tools/": true,
         "build*/": true,
         "devel*/": true,
+        "docs*/": true,
         "install*/": true,
         "logs*/": true
     }
