--- a/hero1-demo/install.yaml
+++ b/hero1-demo/install.yaml
@@ -1,25 +1,8 @@
 - type: target
+  name: hero1-common
+
+- type: target
   name: hero-demo
-
-- type: target
-  name: hero-start
-
-- type: target
-  name: ros-laser_filters
-
-- type: target
-  name: ros-dragonfly_speech_recognition
-
-# RGBD server
-- type: target
-  name: ros-rgbd
-
-# Odometer
-- type: target
-  name: ros-test_tools
-
-- type: target
-  name: hsrb-full
 
 # tmux
 - type: target
