[ros-telegram_ros][python-telegram-bot] move targets for bug

--- a/python-telegram-bot/install.yaml
+++ b/python-telegram-bot/install.yaml
@@ -1,2 +1,8 @@
 - type: pip
   name: python-telegram-bot
+
+# Fix pip ffi.h header missing error
+- type: system
+  name: libffi-dev
+- type: system
+  name: libssl-dev
