feat(python-yapykaldi): Add dependencies pybind11 and python-pkgconfig

--- a/python-yapykaldi/install.yaml
+++ b/python-yapykaldi/install.yaml
@@ -1,2 +1,8 @@
+- type: target
+  name: pybind11
+
+- type: target
+  name: python-pkgconfig
+
 - type: pip
   name: git+https://github.com/tue-robotics/yapykaldi.git
