--- a/python-yapykaldi/install.yaml
+++ b/python-yapykaldi/install.yaml
@@ -7,5 +7,8 @@
 - type: target
   name: python-pkgconfig
 
+- type: target
+  name: python-future
+
 - type: pip
   name: git+https://github.com/tue-robotics/yapykaldi.git
