feat(python-yapykaldi): Add pyaudio deps

--- a/python-yapykaldi/install.yaml
+++ b/python-yapykaldi/install.yaml
@@ -10,5 +10,11 @@
 - type: target
   name: python-future
 
+- type: target
+  name: python-pyaudio
+
+- type: target
+  name: portaudio19-dev
+
 - type: pip
   name: git+https://github.com/tue-robotics/yapykaldi.git
