(travis) Don't clone submodules

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 os: linux
 dist: xenial
+git:
+  submodules: false
 language: shell
+
 addons:
   apt:
     packages:
       - yamllint
+
 script:
   - bash -c 'shopt -s globstar; shellcheck **/*.bash **/*.sh **/setup'
   - bash -c 'find ./ -iname '*.yaml' -or -iname '*.yml' | xargs yamllint'
