--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,23 @@ os: linux
 dist: xenial
 language: shell
 addons:
+  ssh_known_hosts: gitlab.com
   apt:
     packages:
-      - yamllint
+    - yamllint
+git:
+  submodules: false
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_2fc69c4133c3_key -iv $encrypted_2fc69c4133c3_iv
+  -in id_rsa.enc -out ./deploy_key -d
+- eval "$(ssh-agent -s)"
+- chmod 600 ./deploy_key
+- ssh-add ./deploy_key
+
+install:
+- git submodule update --init
+
 script:
-  - bash -c 'shopt -s globstar; shellcheck **/*.bash **/*.sh **/setup'
-  - bash -c 'find ./ -iname '*.yaml' -or -iname '*.yml' | xargs yamllint'
+- bash -c 'shopt -s globstar; shellcheck **/*.bash **/*.sh **/setup'
+- bash -c 'find ./ -iname '*.yaml' -or -iname '*.yml' | xargs yamllint'
