--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,30 @@
+# This travis configuration has ssh keys added to recurse submodules from private gitlab repository
+# Steps to enable ssh support with travis and gitlab are as follows:
+#
+# On the local PC
+# 1. Generate a ssh keypair to be used with CI
+#    ```
+#    mkdir -p ~/travis
+#    ssh-keygen -t rsa -b 4096 -N "" -f ~/travis/deploy_key
+#    ```
+#
+# 2. Add the ssh key to travis
+#    ```
+#    gem install travis
+#    cd <REPOSITORY>
+#    travis encrypt-file ~/travis/deploy_key --pro --add
+#
+# 3. Commit the updated .travis.yml file and the generated file `deploy_key.enc`
+#
+# 4. Append the following lines to .travis.yml under `before_install`
+#    ```
+#    - eval "$(ssh-agent -s)"
+#    - chmod 600 ./deploy_key
+#    - ssh-add ./deploy_key
+#
+# On GITLAB
+# 5. In the repository Settings > CI/CD > Deploy Keys, add the public key from the file ~/travis/deploy_key.pub
+
 os: linux
 dist: xenial
 language: shell
