--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ git:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_2fc69c4133c3_key -iv $encrypted_2fc69c4133c3_iv
-    -in id_rsa.enc -out ./deploy_key -d
+    -in deploy_key.enc -out ./deploy_key -d
   - eval "$(ssh-agent -s)"
   - chmod 600 ./deploy_key
   - ssh-add ./deploy_key
